LeftContainer scrollbar fix

--- a/src/components/Media/RightContainer/RightContainer.module.scss
+++ b/src/components/Media/RightContainer/RightContainer.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-flow: column;
   padding-right: 20px;
-  margin-left: 30px;
+  margin-left: 15px;
   overflow-y: auto;
   scrollbar-color: $accent-lite $main;
   scrollbar-width: thin;
